# psql-service

./: README.md  pyproject.toml
src/psql_service/: __init__.py  server.py
